# command_center

./: .env.production.example  .eslintrc.cjs  .gitignore  README.md  middleware.legacy.ts  netlify.toml  next.config.js  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tailwind.config.ts  tsconfig.json  vercel.json
app/: actions.ts  execution-actions.ts  layout.tsx  loading.tsx
app/market-settings/: page.tsx
app/projects/: page.tsx
app/signals/: page.tsx
app/watchlist/: page.tsx
command_center/: .env.example  README.md  auth.ts  eslint.config.js  index.html  kibo-components.txt  package.json  railpack.json  railway.json  vercel.json  vite.config.ts  vitest.config.ts
command_center/app/: globals.css  page.tsx
command_center/docs/: netlify-deploy.md  railway-deploy.md  vercel-deploy.md
command_center/lib/: aggregation.ts  execution-options.ts  execution-validation.ts  indicators.ts  prisma.ts  session.ts  utils.ts
command_center/prisma/: seed.ts
command_center/providers/: index.ts
docs/: action-sheet-redesign.md  netlify-deploy.md  railway-deploy.md
lib/: logger.ts  validation.ts
prisma/: schema.postgres.prisma  schema.prisma  seed.ts
providers/: alpha-vantage-provider.ts  market-provider.ts  stooq-provider.ts
scripts/: google-auth-bootstrap.mjs  init-db.mjs  run-railway-cron.mjs
server/: daily-brief-autosend.ts  daily-brief-service.ts  dashboard-service.ts  execution-service.ts  google-client.ts  market-data-service.ts  news-service.ts  signal-service.ts  watchlist-service.ts
strat/: classifier.ts
(+55 files in other folders)
